apps/homeassistant/db/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: homeassistant-db
spec:
  serviceName: homeassistant-db
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant-db
  template:
    metadata:
      labels:
        app: homeassistant-db
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
