apps/homeassistant/db/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-db
spec:
  type: ClusterIP
  clusterIP: None          # headless
  selector:
    app: homeassistant-db
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
